# OptiXApp

./: CMakeLists.txt  build.sh
cmake/: handleDeps.cmake
dependencies/: CMakeLists.txt
dependencies/OptiX/: CMakeLists.txt  optix_stubs.h
dependencies/glad/: CMakeLists.txt
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
dependencies/opengl/: CMakeLists.txt  symlink_gl.sh
dependencies/opengl/include/: EGL
dependencies/tinyobjloader/: CMakeLists.txt
src/app/: CMakeLists.txt  bindings.hpp  camera.cpp  camera.hpp  gl_renderer.cpp  gl_renderer.hpp  main.cu  optix_renderer.cu  optix_renderer.hpp  renderer.hpp  scene.hpp  ssao.cpp  ssao.hpp  window.cpp  window.hpp
src/app/modules/: render_module.cu  render_module.h  utils.h  vec_math.h
src/app/shader/: bindings  deferred.frag  deferred.vert  prepass.frag  prepass.vert  scene.frag  scene.vert  screenquad.frag  ssao.frag  ssao_blur.frag
src/modules/: draw_solid_color.cu  optixHello.h
src/shader/: screenquad.frag
src/utils/opengl/: buffer.hpp  context.hpp  shader.hpp  texture.hpp  vertex_array.hpp
src/utils/optix/: context.hpp  module.hpp  pipeline.hpp  program_group.hpp  sbt_record.hpp  utils.hpp
